--- a/Style.css
+++ b/Style.css
@@ -27,7 +27,14 @@
     padding: 10rem;
     height: 100%;
     width:100%;
+    display: flex;
     height:auto;
+    color: black;
+    background-color: bisque;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  #namestyle{
     color: black;
     background-color: bisque;
     font-family: Arial, Helvetica, sans-serif;
